# breadRot

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.rs.old
MCS51sim/: Cargo.toml
extern-sdcc/: readme.txt  wrapper.h
resources/8051sim/: 8051sim  i8051.cc  i8051.h  main.cc
samples/: 8051.1.asm
src/: bindata.rs  error.rs  lib.rs  main.rs
src/boards/: mod.rs
src/boards/mcs51/: mod.rs  object.rs
src/boards/mcs51/simulator/: object.rs  state.rs
src/ccompilers/: mod.rs  sdcc.rs
src/core/: assemble.rs  bindata.rs  mod.rs
src/core/bindata/: mod.rs  u8bitfield.rs
