[package]
name = "breadrot"
version = "0.1.0"
authors = ["Localbox Crox <hman@hman.io>"]
license = "BSD-3-Clause"
description = "a collection of simulators for microprocessors in rust"
keywords = ["simulator", "assembler"]
repository = "https://github.com/DaBigBlob/breadRot"
readme = "README.md"
edition = "2021"

[lib]
name = "breadrot"
path = "src/lib.rs"
doc = true

[[bin]]
name = "breadrot"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.58"


[features]
