[package]
name = "breadrot"
version = "0.1.0"
authors = ["Localbox Crox <hman@hman.io>"]
license = "BSD-3-Clause"
description = "a collection of compilers, assemblers and simulators for many microprocessors"
keywords = ["simulator", "assembler", "compiler"]
repository = "https://github.com/DaBigBlob/breadRot"
readme = "README.md"
edition = "2021"

[lib]
name = "breadrot"
path = "src/lib.rs"
doc = true

[[bin]]
name = "breadrot"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
easy-ext = "1.0.1"
thiserror = "1.0.58"

[build-dependencies]
bindgen = "0.69.4"


[features]
